--- a/data/add-site.html
+++ b/data/add-site.html
@@ -9,20 +9,25 @@
     font: 100% arial, helvetica, sans-serif;
     background-color: #F5F5F5;
   }
-  textarea {
-    width: 180px;
-    height: 180px;
-    margin: 10px;
-    padding: 0px;
+  h1 {
+    background-color: #D5D5D5;
+    font-size: 1em;
+  }
+  input {
+  width: 100%
   }
   </style>
  
 </head>
  
 <body>
-
-  <div><span>Site:</span><input type="text" id="site"></input></div>
-  <div><span>UA:</span><input type="text" id="ua"></input></div>
+  <h1>User agent for this site</h1> 
+  <h2>Site:</h2> 
+  <div><input type="text" id="site"></input></div>
+  <h2>User Agent:</h2> 
+  <div>
+  <input type="text" id="ua"></input>
+  </div>
  
 </body>
  
