--- a/data/config.html
+++ b/data/config.html
@@ -6,7 +6,7 @@
   <title>Add site</title>
 	<style media="all" type="text/css">
 	body {
-	font: 100% arial, helvetica, sans-serif;
+	font: 70% "Trebuchet MS", sans-serif;
 	background-color: #F5F5F5;
 	}
 	h1 {
@@ -28,8 +28,13 @@
 	</style>
 	<style type="text/css">
 		ul.sites { padding: 0px }
-		li.sites { list-style-type: None; width: 100% }
-		.site { background-color: #BBB; }
+		li.sites {
+			list-style-type: None; width: 100%;
+			font-family: Trebuchet MS,Helvetica,Arial,sans-serif;
+			font-size: 1.1em;
+			margin-bottom: 5px;
+			}
+		.site {  }
 		.agent { padding-left: 2em;background-color: #DDD; }
 		.del { color: red; cursor: pointer }
 	</style>
@@ -65,11 +70,12 @@
 		<h1>Customized sites</h1>
 		<ul id="sites" class="sites">
 			<li class="model sites" style="display:None">
-				<div class="site">
-					<span class="del">&#x2717;</span>
+				<div class="ui-state-highlight">
+					<span class="del ui-icon ui-icon-circle-close"
+					style="float: left; margin-right: .3em;"></span>
 					<span class="site">Site</span>
 				</div>
-				<div class="agent">Agent</div>
+				<div class="agent ui-state-highlight">Agent</div>
 			</li>
 		</ul>
 	</div>
