--- a/data/config.html
+++ b/data/config.html
@@ -40,7 +40,12 @@
       .del { color: red; cursor: pointer }
     </style>
 
-    <link type="text/css" href="css/overcast/jquery-ui-1.8.20.custom.css" rel="Stylesheet" />
+    <link href="jquery-ui.min.css" rel="stylesheet"></link>
+    <!--
+        <script type="text/javascript" src="jquery-2.1.3.min.js"></script>
+        <script type="text/javascript" src="jquery-ui.min.js"></script>
+        <script type="text/javascript" src="config.js"></script>
+    -->
   </head>
   
   <body>
@@ -59,7 +64,7 @@
 	<div>
 	  <input type="text" id="ua"></input>
 	</div>
-	<h2 data-l10n-id="cfg_subdomains">Match subdomains: <input type="checkbox" id="subdomain"></input></h2>
+	<h2><span data-l10n-id="cfg_subdomains">Match subdomains:</span><input type="checkbox" id="subdomain"/></h2>
 	<span class="help" data-l10n-id="cfg_help">(Set to blank to use default user-agent; Press enter to save or escape to cancel)</span>
       </div>
 
